# hnefatafl-arena

./: API_REFERENCE.md  BRANDUBH_RULES.md  Cargo.toml  PLUGIN_GUIDE.md  PLUGIN_SYSTEM_SUMMARY.md  QUICK_START.md  README.md  TESTS.md  WEB_APP.md  run_tests.sh
.github/workflows/: rust.yml
examples/: alphabeta_match.rs  bot_template.rs  brandubh_match.rs  custom_bot.rs  plugin_match.rs  simple_match.rs  test_mcts_bot.rs  web_app.rs
plugins/alphabeta_bot_plugin/: README.md
plugins/greedy_bot_plugin/src/: lib.rs
plugins/mcts_bot_plugin/: .gitignore  Cargo.toml
plugins/mcts_bot_plugin/src/: hnefatafl.rs  lib.rs  mcts.rs  transposition.rs  zobrist.rs
src/: arena.rs  bot.rs  game.rs  lib.rs  main.rs  plugin.rs  web.rs
static/: game.js  index.html  style.css
