[package]
name = "hnefatafl-arena"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hnefatafl-arena"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
libloading = "0.8"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }

[dev-dependencies]
rand = "0.8"
